# secretflow-worker

./: .env.development  .env.docker  .env.example  .env.secretflow  .gitignore  Dockerfile  Makefile  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
.obsidian/: community-plugins.json  workspace.json
.obsidian/plugins/vscode-editor/: data.json
config/: node1.env  node2.env  production.env.template
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml
docker/alice/: Dockerfile
docker/bob/: Dockerfile
docker/scripts/: alice_psi.py  bob_psi.py  start_psi.sh
docs/: 04.1.secretflow_work_list.md  04.2.secretpad_work_list.md  04.task_status_listener.md  SecretflowProduction.md  chain.md  deployment_guide.md  design.md  param.md  param.yaml  production_deployment_design_host_network.md  pytest_configuration.md  start.md  troubleshooting.md  web_integration_guide.md
docs/summary/: 01.secretflow_task.md  02.task_1.3_completion_summary.md  03.task_2.2_completion_summary.md  04.task_2.3_completion_summary.md  05.secure_model_save_summary.md  07.refactoring_summary.md  07.secure_predict_improvement.md  09.privacy_improvement_no_stats.md  10.ss_xgboost_implementation.md  12.ml_task_refactoring.md  14.pytest_env_fix.md  15.logging_unification.md  16.preprocessing_refactoring.md  16.tests_refactoring.md  17.stats_evaluation_refactoring.md  18.failed_attempts.md  19.complete_refactoring_summary.md  21.production_deployment_design_host_network.md  22.deployment_guide.md  24.task_sending_guide.md  25.summary.md  26.ray_architecture_clarification.md  27.configuration_explanation.md  28.project_work_summary.md  model_save_load_summary.md  path_format_improvement.md
docs/worker-api/: 00.worker-api.md  01.worker_architecture.md
scripts/: clean_beaver_cache.sh  clear_celery_queue.py  deploy.sh  entrypoint.sh  ray_cluster.sh  send_task.py  start_ray_head.sh  start_ray_worker.sh
src/: __init__.py  celery_app.py  log.py  worker.py
src/base/: __init__.py  async_helpers.py  task_base.py
src/config/: __init__.py  celery_config.py  settings.py  task_registry.py  task_routes.py
src/secretflow/: __init__.py  cluster_initializer.py  data_loader.py  device_manager.py  health_check.py  hello.py  local_test.py  task_executor.py
src/secretflow/algorithms/: __init__.py  base_executor.py  psi_executor.py
src/secretflow_task/: __init__.py  celery_tasks.py  cluster_initializer.py  data_loader.py  device_manager.py  health_check.py  hello.py  local_test.py  task_dispatcher.py  task_executor.py
src/secretflow_task/algorithms/: __init__.py  base_executor.py  lr_executor.py  psi_executor.py
src/secretflow_task/jobs/: __init__.py  evaluation_task.py  ml_task.py  ml_task.py.backup  ml_task_secure.py  preprocessing_task.py  psi_task.py  stats_task.py
src/secretflow_task/jobs/boost/: __init__.py  ss_xgb_task.py
src/secretflow_task/jobs/evaluation/: __init__.py  biclassification_eval_task.py  regression_eval_task.py
src/secretflow_task/jobs/linear/: __init__.py  ss_lr_task.py
src/secretflow_task/jobs/preprocessing/: __init__.py
src/secretflow_task/jobs/preprocessing/binning/: __init__.py  equal_width_binning_task.py  quantile_binning_task.py
src/secretflow_task/jobs/preprocessing/encoder/: __init__.py  label_encoder_task.py  onehot_encoder_task.py
src/secretflow_task/jobs/preprocessing/fillna/: __init__.py  fillna_task.py
src/secretflow_task/jobs/preprocessing/scaler/: __init__.py  minmax_scaler_task.py  standard_scaler_task.py
src/secretflow_task/jobs/stats/: __init__.py  pearson_correlation_task.py  table_statistics_task.py  vif_task.py
src/tasks/: health_check.py  privacy_computing.py
src/utils/: exceptions.py  log.py  logger.py  status_notifier.py  validator.py
tests/: README.md  conftest.py  inspect_sf.py  inspect_sf_v2.py  local_test.py  local_test_alice.py  local_test_bob.py
tests/integration/: __init__.py  test_ml_workflow.py
tests/no_pytest/: local_test.py  local_test_alice.py  local_test_bob.py  manual_psi_test.py  test_task_executor_integration.py  verify_celery_task.py
tests/unit/: README_REAL_DEVICE_TESTS.md  test_coverage_analysis.md  test_ml_task.py  test_ml_task_secure.py  test_preprocessing_task.py  test_psi_task.py  test_summary.md  test_task_dispatcher.py
tests/unit/jobs/: __init__.py  test_psi_task.py
tests/unit/jobs/boost/: __init__.py  test_ss_xgb_task.py
tests/unit/jobs/evaluation/: __init__.py  test_biclassification_eval_task.py  test_regression_eval_task.py
tests/unit/jobs/linear/: __init__.py  test_ss_lr_task.py
tests/unit/jobs/preprocessing/: __init__.py  test_encoder_tasks.py  test_scaler_tasks.py
tests/unit/jobs/stats/: __init__.py  test_pearson_correlation_task.py  test_table_statistics_task.py  test_vif_task.py
