[project]
name = "secretflow-worker"
version = "0.1.0"
description = "SecretFlow隐私计算生产模式后端服务"
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "secretflow==1.12.0b0",
    "celery[redis]",
    "redis",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "cryptography",
    "kombu",
    "billiard",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "flower",
    "loguru",
    "python-dotenv",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
sfl = { git = "https://github.com/secretflow/sfl.git", rev = "peicheng/fix_deps" }

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/no_pytest"
testpaths = ["tests"]
norecursedirs = ["tests/no_pytest"]
filterwarnings = [
    "ignore:os.fork\\(\\) was called:RuntimeWarning"
]
